# timbot

./: .gitignore  CLAUDE.md  LICENSE  main.py  pyproject.toml
models/: README.md
src/timbot/: async_downloader.py  brain.py  ears.py  eyes.py  main.py  mouth.py
