[project]
name = "timbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "httpx>=0.28.1",
    "piper-tts>=1.3.0",
    "ruff>=0.12.12",
    "sounddevice>=0.5.2",
    "soundfile>=0.13.1",
    "tqdm>=4.67.1",
    "typer>=0.17.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/timbot"]

[dependency-groups]
dev = [
    "ty>=0.0.1a20",
]
